fix twitter load jump; fix mobile landscape issue; update  styles and precompile

--- a/app/assets/stylesheets/_contacts.scss
+++ b/app/assets/stylesheets/_contacts.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   padding: 2.1875rem;
-  margin: 60px auto 30px;
+  margin: 30px auto;
   min-width: 13rem;
   transition: all 1.1s cubic-bezier(.87,-.41,.19,1.44);
 
